--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    buildTypes.each {
+        it.buildConfigField 'String', 'GAME_DB_API_KEY', GameDBAPIKey
+    }
 }
 
 dependencies {
@@ -43,7 +47,6 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:9.0.2'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-
 
 }
 
