Successfully created login that is stored in Firebase.  Now have started work on getting API call to work.

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,4 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-GameDBAPIKey= "49fde102896808bd4908723a6a4aacd5ab1c46b9"
+GAME_DB_API_KEY= "49fde102896808bd4908723a6a4aacd5ab1c46b9"
