--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.0"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "com.epicodus.andrewrusso.elforge"
         minSdkVersion 15
-        targetSdkVersion 24
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -33,7 +33,7 @@ android {
     }
 
     buildTypes.each {
-        it.buildConfigField 'String', 'GAME_DB_API_KEY', GameDBAPIKey
+        it.buildConfigField 'String', 'GAME_DB_API_KEY', GAME_DB_API_KEY
     }
 }
 
