--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.code.gson:gson:2.7'
     compile 'org.parceler:parceler-api:1.1.1'
+    compile 'com.android.support:recyclerview-v7:+'
     apt 'org.parceler:parceler:1.1.1'
 
 }
