Successfully have games added to the Queue and can be listed in user's account.  Will move on and work on gestures that will allow them to reorder the queue and remove items from the queue.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.SearchResultsActivity" />
-        <activity android:name=".ui.AboutActivity"></activity>
-        <activity android:name=".ui.GameDetailActivity"></activity>
+        <activity android:name=".ui.AboutActivity" />
+        <activity android:name=".ui.GameDetailActivity" />
+        <activity android:name=".ui.QueuedGameListActivity" />
+        <activity android:name=".ui.Test"></activity>
     </application>
 
 </manifest>
