--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,12 @@
                 android:value="com.epicodus.andrewrusso.elforge.ui.MainActivity">
             </meta-data>
         </activity>
-        <activity android:name=".ui.GameDetailActivity" />
+        <activity android:name=".ui.GameDetailActivity">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value="com.epicodus.andrewrusso.elforge.ui.SearchResultsActivity">
+        </meta-data>
+        </activity>
         <activity android:name=".ui.QueuedGameListActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
