--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.epicodus.andrewrusso.elforge">
+    package="com.epicodus.andrewrusso.elforge" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -9,38 +9,43 @@
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity android:name=".ui.MainActivity" />
         <activity android:name=".ui.CreateAccountActivity" />
-        <activity android:name=".ui.LoginActivity">
+        <activity android:name=".ui.LoginActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.SearchResultsActivity">
+        <activity android:name=".ui.SearchResultsActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.epicodus.andrewrusso.elforge.ui.MainActivity"></meta-data>
+                android:value="com.epicodus.andrewrusso.elforge.ui.MainActivity" />
         </activity>
-        <activity android:name=".ui.AboutActivity">
+        <activity android:name=".ui.AboutActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.epicodus.andrewrusso.elforge.ui.MainActivity"></meta-data>
+                android:value="com.epicodus.andrewrusso.elforge.ui.MainActivity" />
         </activity>
-        <activity android:name=".ui.GameDetailActivity">
+        <activity android:name=".ui.ConvoActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.epicodus.andrewrusso.elforge.ui.SearchResultsActivity"></meta-data>
+                android:value="com.epicodus.andrewrusso.elforge.ui.MainActivity" />
         </activity>
-        <activity android:name=".ui.QueuedGameListActivity">
+        <activity android:name=".ui.GameDetailActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.epicodus.andrewrusso.elforge.ui.MainActivity"></meta-data>
+                android:value="com.epicodus.andrewrusso.elforge.ui.SearchResultsActivity" />
+        </activity>
+        <activity android:name=".ui.QueuedGameListActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.epicodus.andrewrusso.elforge.ui.MainActivity" />
         </activity>
         <activity android:name=".ui.Test" />
-        <activity android:name=".ui.UserDetailActivity"></activity>
+        <activity android:name=".ui.UserDetailActivity" />
     </application>
 
 </manifest>
